--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "redux-form": "^8.3.7",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "web-vitals": "^0.2.4"
@@ -43,6 +44,8 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^7.16.0",
+    "eslint-plugin-react": "^7.21.5",
     "node-sass": "^4.14.1"
   }
 }
